--- a/internetofthings/templates/internetofthings/base.html
+++ b/internetofthings/templates/internetofthings/base.html
@@ -28,6 +28,9 @@
     </div>
     {% block content %}    
     {% endblock  %}
+    <div class="container col-12 text-center" style="background-color:#5A5AFA;">
+        © Copyrights Reserved , 2020
+    </div>
 
 
     <!-- Optional JavaScript -->
