--- a/internetofthings/templates/internetofthings/home.html
+++ b/internetofthings/templates/internetofthings/home.html
@@ -5,13 +5,13 @@
         <div class="container col-xs-12 col-md-7">
            <h3 class="text-justify">Department of Computer Science & Engineering presents you workshop event,</h3>
            <h2 class="text-center">"THE INTERNET OF THINGS"</h2>
-           <h4 class="font-weight-bold text-justify mt-5">Courses offered:</h4>
+           <h4 class="font-weight-bold text-justify mt-4">Courses offered:</h4>
            <h5 class="text-justify mt-2 pl-3">> Intro of internet of things</h5>
            <h5 class="text-justify pl-3">> Arduino and it's working</h5>
            <h5 class="text-justify pl-3">>Interfacing wifi module</h5>
            <h5 class="text-justify pl-3">>Controlling home appliances</h5>
            <h5 class="text-justify pl-3">and many more...</h5>
-           <h4 class="text-justify pl-3 pt-3">Date: 26th and 27th March 2021<h4 class="text-center">To register!,<a href="registration" class="btn btn-link" role="button">Click here</a></h4></h4>
+           <h4 class="text-justify pl-3 pt-3">Date: 26th and 27th March 2021<h4 class="text-center pt-3">To register!,<a href="registration" class="btn btn-link" role="button">Click here</a></h4></h4>
            <h5 class="text-right">Cost: Rs.500</h5>
            <h5 class="text-right">Duration: 2 days</h5>           
         </div>
