--- a/internetofthings/templates/internetofthings/failure.html
+++ b/internetofthings/templates/internetofthings/failure.html
@@ -1,6 +1,6 @@
 {% extends "internetofthings/base.html" %}
 {% block content %}
-        <div class="container" style="padding-top:200px ;">
+        <div class="container" style="padding-top:200px; padding-bottom:243px;">
             <div class="alert alert-danger" role="alert">
                 <h2 class="alert-heading text-center">Failed!</h2>
                 <p>Sorry number of participants has exceeded the limit!</p>
