--- a/internetofthings/templates/internetofthings/retry.html
+++ b/internetofthings/templates/internetofthings/retry.html
@@ -1,6 +1,6 @@
 {% extends "internetofthings/base.html" %}
 {% block content %}
-        <div class="container" style="padding-top:200px ;">
+        <div class="container" style="padding-top:200px;padding-bottom:243px;">
             <div class="alert alert-danger" role="alert">
                 <h2 class="alert-heading text-center">FAILED</h2>
                 <p>Your have already registered</p>
