--- a/internetofthings/templates/internetofthings/success.html
+++ b/internetofthings/templates/internetofthings/success.html
@@ -1,6 +1,6 @@
 {% extends "internetofthings/base.html" %}
 {% block content %}
-        <div class="container" style="padding-top:200px ;">
+        <div class="container" style="padding-top:200px; padding-bottom:243px;">
             <div class="alert alert-success" role="alert">
                 <h2 class="alert-heading text-center">SUCCESS!</h2>
                 <p>Your registration is done successfully!</p>
